Making some adjustments to the order of the elements

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <div id="containerIdTasks" class="StyleContainerTasks">
       <div id="Top1"></div>
     </div>
+    <div id="tasksCheck" class="StyleContainerTasksCheck">
+
+    </div>
     <!-- <div class="feedback">
       <input type="checkbox" id="feedback-checkbox"/>
       <label for="feedback-checkbox">Ask for new feedback</label>
