adding a remove task feature

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     </div>
     <div id="containerIdTasks" class="StyleContainerTasks">
       <div id="Top1"></div>
+      <div id="tasksBackCheck" class="StyleContainerTasksCheck">
+      </div>
     </div>
-    <div id="tasksCheck" class="StyleContainerTasksCheck">
 
-    </div>
     <!-- <div class="feedback">
       <input type="checkbox" id="feedback-checkbox"/>
       <label for="feedback-checkbox">Ask for new feedback</label>
