--- a/To-do-list-main/index.html
+++ b/To-do-list-main/index.html
@@ -1,40 +1,27 @@
-<!DOCTYPE html>
-<html lang="PT-BR>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-    <!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Criar Lista</title>
-  <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
+  <!DOCTYPE html>
+  <html lang="PT-BR">
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
+  <body>
+    <title>Criar Lista</title>
+    <link rel="stylesheet" href="css/styles.css">
+  </head>
+  <body>
+  
   <div class="container">
-    <h1>Crie sua lista.</h1>
-    <div class="input-group">
-      <input id="NameTask" type="text" placeholder="Digite aqui..." />
-      <button id="button" class="add-button">+</button>
-    </div>
-    <div id="containerIdTasks" class="StyleContainerTasks">
-      <div id="Top1"></div>
-      <div id="tasksBackCheck" class="StyleContainerTasksCheck">
+      <h1>Type your List.</h1>
+
+      <div class="input-bar">
+        <input id="NameTask" type="text" placeholder="Digite aqui..." />
+        <button id="button" class="add-button">+</button>
       </div>
+      <div id="ScrollTasks" class="ScrollStyleContainerTasks">
+        <div id="TasksContainerId" class="TasksContainer"></div>
     </div>
-
-    <!-- <div class="feedback">
-      <input type="checkbox" id="feedback-checkbox"/>
-      <label for="feedback-checkbox">Ask for new feedback</label>
-    <button class="delete-button">🗑️</button> -->
-</div>
   </div>
-  <script src="ToDo.js"></script>
-</body>
-</html>
+    <script src="ToDo.js"></script>
 
-</body>
-</html>
+  </body>
+  </html>
